css/content_page.css
/* Typography */
body {background-color: #434343; font-family: 'Source Sans Pro', sans-serif;}
h1 {color: #f09135; font-size: 30px;}
h2 {color: #9babc3; font-size: 25px;}

/* Main container */
html, body {height: 100vh;}
.app-container {display: flex; padding: 10px 20px;}
.about {background-color: #434343; color: white; flex: 2; padding: 1rem; overflow-y: scroll;}
.photos {background-color: #434343; flex: 1;}

i.site-back-arrow {position: absolute; font-size: 30px; margin-top: 30px; margin-left: 20px; padding: 2.5px 10px; color: orange; border-color: orange; border: 0.5px solid; border-radius: 30px; transition: 0.3s;}
i.site-back-arrow:hover {transform: scale(1.2);}
.about h1, .about h2 {margin-left: 80px;}

#content {margin-top: 25px;  text-align: justify; text-justify: inter-word;}
#content h1 {color: white; font-size: 22px; margin: 20px 0 10px;}
#content h2, #content h3 {color: white; font-size: 22px; margin: 20px 0 10px;}
#content p, #content li {line-height: 1.45em; padding: 6px 0; font-size: 17px}
#content a {color: orange;}

.photos {padding: 30px 0;}
.photos img {display: block; margin: 0 auto; padding: 5px 0; height: calc(100vh / 4);}

.footer {margin-top: 30px; bottom: 10px;}
.footer img {height: 70px; margin-right: 10px;}

@media (max-width: 800px) {
   .photos {display: none;}
}

@media (max-width: 500px) {
	.app-container {padding: 5px 10px;}
	i.site-back-arrow {font-size: 20px; margin-top: 10px; margin-left: 10px;}
	.about h1 {margin-top: 40px; font-size: 25px; margin-left: 0;}
	.about h2 {font-size: 22px; margin-left: 0;}
	#content p, #content li {font-size: 14px;}
	.about {display: block;}
	.footer img {height: 35px; margin-right: 10px;}
}

